# gstroybat

./: .gitCOMMIT_EDITMSG  .gitignore  .gitmodules  .smetaView.c.swp  CMakeLists.txt  Info.plist  License.md  Makefile  Readme.md  YDConnect.cc  chworkdir.c  chworkdir.h  compile_commands.json  config.c  cp.c  cp.h  cp_recursive.c  getbundle.h  gstroybat.desktop  gstroybat.h  gstroybat.xml  itemsListView.c  itemsListView.h  itemsTableModel.c  itemsTableModel.h  itemsView.c  itemsView.h  ls.c  ls.h  macos.cmake  main.c  mainMenu.c  mainWindow.c  mainWindow.h  materialsView.c  mingw.cmake  openfile.c  openfile.h  servicesView.c  smetaEdit.c  (+7 more)
.cache/clangd/index/: Availability.h.2ED23327A8C5DAB4.idx  AvailabilityInternal.h.0A9CD88C6ABA56CF.idx  AvailabilityVersions.h.460DA89FB279CC8D.idx  MySQLConnect.h.01C4E561B4C38DE7.idx  OSByteOrder.h.4841407B4E5CDA23.idx  _OSByteOrder.h.9C8A69A3D699A81D.idx  _clock_t.h.9ABC14CC89151639.idx  _common.h.D297989904DF7A4E.idx  _ct_rune_t.h.B75B9DB1781C4065.idx  _ctermid.h.459C05A101B97E66.idx  _dev_t.h.F93A087A7840FEBF.idx  _endian.h.40BED5584CD9288C.idx  _id_t.h.45E4F67DD14166F3.idx  _int16_t.h.092E6FFEDB46075C.idx  _int32_t.h.9B07D63702DC2EAA.idx  _int64_t.h.F216FCD05E07274D.idx  _int8_t.h.42CCFD1EE9A795A8.idx  _intmax_t.h.7039AB480BA519C7.idx  _intptr_t.h.E9DD9C70C00B10FF.idx  _malloc.h.FE4521FE2A022FE9.idx  _mcontext.h.033430C088043EA2.idx  _mcontext.h.AF365B2E97B45F1B.idx  _mode_t.h.3CFA66022C844AF8.idx  _null.h.F43A51DABF5B05C8.idx  _off_t.h.38C41629F9F687DD.idx  _pid_t.h.D848E83563EF1B0D.idx  _posix_availability.h.04CFD52AD332888C.idx  _pthread_attr_t.h.828D05632DBF7320.idx  _pthread_types.h.7D951AC195EA6ECF.idx  _rune_t.h.B99CDCC4853C32C9.idx  _sigaltstack.h.8F0B4C31F0E94EDB.idx  _sigset_t.h.BEF21221A5036C18.idx  _size_t.h.703A5D71DBFE8598.idx  _ssize_t.h.B64A4520562810F3.idx  _stdio.h.C2041B703B805F92.idx  _stdio.h.F5509DC9C7F40919.idx  _string.h.C9CB09D50AD959B4.idx  _strings.h.BC9680C1A5F6C604.idx  _structs.h.054848410032EFE2.idx  _structs.h.C8748E2DD21502F3.idx  (+53 more)
AppIcons/: DS_Store
macos/: .mac_launcher.sh.un~  mac_launcher.sh
macos/gtk3/Frameworks/: libX11.6.dylib  libXau.6.dylib  libXdmcp.6.dylib  libXext.6.dylib  libXrender.1.dylib  libatk-1.0.0.dylib  libcairo-gobject.2.dylib  libcairo.2.dylib  libepoxy.0.dylib  libfontconfig.1.dylib  libfreetype.6.dylib  libfribidi.0.dylib  libgdk-3.0.dylib  libgdk_pixbuf-2.0.0.dylib  libgio-2.0.0.dylib  libglib-2.0.0.dylib  libgmodule-2.0.0.dylib  libgobject-2.0.0.dylib  libgraphite2.3.dylib  libharfbuzz.0.dylib  libintl.8.dylib  libjpeg.8.2.2.dylib  libpango-1.0.0.dylib  libpangocairo-1.0.0.dylib  libpangoft2-1.0.0.dylib  libpcre2-8.0.dylib  libpixman-1.0.dylib  libpng16.16.dylib  libxcb-render.0.dylib  libxcb-shm.0.dylib  libxcb.1.dylib
macos/lib/gdk-pixbuf-2.0/2.10.0/: .loaders.cache.un~  loaders.cache.in
winapi/gtk3/x64/gdk-pixbuf-2.0/2.10.0/: loaders.cache
winapi/gtk3/x86/gdk-pixbuf-2.0/2.10.0/: loaders.cache
